fix(style.css): Scaling on app banner
Fix the scaling on app banner for when zoomed. The banner still breaks at 200% however this is an issue that will require further investigation due to the fact that it is the container below that breaks it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body {
   background:rgba(15, 0, 20, 0.4);
   margin: auto;
   text-align: center;
-  height: 100%;
+  height: auto;
 }
 
 .extended h1 {
@@ -208,7 +208,7 @@ body {
 #ecosystem-main {
   background: url('../images/ecosystem/banner.png') center center no-repeat;
   background-size: cover;
-  height: 40vh;
+  height: auto;
   margin-bottom: 2em;
   display: block;
 }
@@ -216,7 +216,7 @@ body {
 #ecosystem-wizard, #ecosystem-system, #ecosystem-rpk {
   background: url('../images/ecosystem/banner.png') center center no-repeat;
   background-size: cover;
-  height: 40vh;
+  height: auto;
   margin-bottom: 2em;
   display: none;
 }
@@ -494,7 +494,7 @@ footer a {
 #ecosystem-main {
   background: url('../images/ecosystem/banner.png') center center no-repeat;
   background-size: cover;
-  height: 32vh;
+  height: auto;
   margin-bottom: 2em;
   display: block;
 }
@@ -502,7 +502,7 @@ footer a {
 #ecosystem-wizard, #ecosystem-system, #ecosystem-rpk {
   background: url('../images/ecosystem/banner.png') center center no-repeat;
   background-size: cover;
-  height: 32vh;
+  height: auto;
   margin-bottom: 2em;
   display: none;
 }
